# shorten-rs

./: Cargo.toml  LICENSE  README.md
doc/: FORMAT.md
examples/: smoke_test.rs
src/: bitstream.rs  buffer.rs  decode.rs  error.rs  header.rs  lib.rs
tests/: decode_tests.rs
